# 3d_scanner

./: .gitattributes  Cargo.toml  README.md  build.ps1  calibration.json
.devcontainer/: devcontainer.json
.github/workflows/: raspberrypi.yml  release.yml  rust.yml
client/: Cargo.toml
client/src/: app.rs  main.rs
docker/: Dockerfile
models/: bearing holder.f3d  bearing test pieces.f3d  bearing test pieces.stl  bearing_holder.blend  gear.blend  scanner.blend  stepper_motor.blend
msg/: Cargo.toml
msg/src/: lib.rs
scanner_ui/: Cargo.toml  index.html
scanner_ui/assets/: sw.js
scanner_ui/src/: app.rs  draw.rs  lib.rs  main.rs  point_cloud.wgsl  render_ctx.rs
server/: Cargo.toml
server/.devcontainer/: Dockerfile  Dockerfile.cross
server/src/: calibration.rs  cameras.rs  imgproc.rs  logging.rs  main.rs  motor.rs  scanner.rs  server.rs
src/: cameras.rs  img_processing.rs  logging.rs  main.rs  motor.rs
