[package]
name = "scanner_3d"
version = "0.1.0"
edition = "2021"

[features]
camera = ["dep:libcamera"]

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
glam = "0.22.0" # same version as in rerun 0.16.1
image = "0.24.9" # same version as in rerun 0.16.1
rerun = { version = "0.16.1", features = ["sdk", "glam", "image"], default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
libcamera = { version = "0.2.3", optional=true }
