[package]
name = "scanner_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
glam = "0.25.0"
image = "0.24.8"
rerun = { version = "0.12.1", features = ["sdk", "glam"], default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
time = ">=0.3.35"
