[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
default = ["rerun"]
camera = ["dep:libcamera", "dep:drm-fourcc"]
motor = ["dep:rppal"]
rerun = ["dep:rerun"]

[dependencies]
msg = { path = "../msg" }
clap = { version = "4.4.18", features = ["derive"] }
glam = { version = "0.28.0", features = ["serde"] }
image = "0.25.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.44"
rerun = { version = "0.22.1", features = [
	"sdk",
	"glam",
	"image",
], default-features = false, optional = true }
libcamera = { version = "0.2.3", optional = true }
drm-fourcc = { version = "2.2.0", optional = true }
rppal = { version = "0.19.0", optional = true }
tungstenite = "0.27.0"
log = "0.4.27"
env_logger = "0.11.8"
